--- a/index.html
+++ b/index.html
@@ -6,12 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>metodo post - ajax</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.js"></script>
+    <title>studio metodo post - ajax</title>
 </head>
 
 <body>
 
-  
+
+    <div class="wrapper">
+        <!-- la input -->
+        <input type="text" id="input-text" placeholder="inserisci testo">
+        <!--  il bottone -->
+        <button id="btn">Clicca</button>
+    </div>
+
+    <!-- la ul da stampare -->
+    <ul class="stampa-lista">
+
+    </ul>
+
+
+    <!-- template handlebars -->
+    <script id="template" type="text/x-handlebars-template">
+
+
+        
+    </script>
+    <!-- fine handlebars -->
+
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Javascript -->
