inserite funzioni post e delete - esercizio completo

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     <!-- template handlebars -->
     <script id="lista-template" type="text/x-handlebars-template">
 
-        <li data-todo="{{ id }}"> {{ text }} </li>
+        <li data-todo="{{ id }}"> {{ text }} 
+            <button class="btn-elimina">Elimina</button> 
+        </li>
 
     </script>
     <!-- fine handlebars -->
