--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- handlebars setup -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.js"></script>
+    
     <title>studio metodo post - ajax</title>
 </head>
 
@@ -29,9 +31,7 @@
     <!-- template handlebars -->
     <script id="lista-template" type="text/x-handlebars-template">
 
-        <li data-todo="{{ id }}"> {{ text }} 
-            <button class="btn-elimina">Elimina</button> 
-        </li>
+        <li data-todo="{{ id }}"> {{ text }}   <button class="btn-elimina">Elimina</button>     </li>
 
     </script>
     <!-- fine handlebars -->
